--- a/jsjs/index.html
+++ b/jsjs/index.html
@@ -105,70 +105,76 @@
     </div>
     <div class="row mt-0">
         <div class="col-lg-6 mx-auto">
-            <div class="footer-category" id="footer-category-n1">
-                <a href="#">
-                    <i class="fas fa-school fa-4x"></i>
-                    <div class="txt">교육</div>
-                </a>
+            <div class="d-flex justify-content-center">
+                <div class="footer-category">
+                    <a href="#">
+                        <i class="fas fa-school fa-4x"></i>
+                        <div class="txt">교육</div>
+                    </a>
+                </div>
+                <div class="footer-category">
+                    <a href="#">
+                        <i class="fas fa-industry fa-4x"></i>
+                        <div class="txt">경제/산업</div>
+                    </a>
+                </div>
+                <div class="footer-category">
+                    <a href="#">
+                        <i class="fas fa-hands-helping fa-4x"></i>
+                        <div class="txt">사회복지</div>
+                    </a>
+                </div>
+                <div class="footer-category">
+                    <a href="#">
+                        <i class="fas fa-medkit fa-4x"></i>
+                        <div class="txt">보건</div>
+                    </a>
+                </div>
+                <div class="footer-category">
+                    <a href="#">
+                        <i class="fas fa-plane-departure fa-4x"></i>
+                        <div class="txt">문화/관광</div>
+                    </a>
+                </div>
             </div>
-            <div class="footer-category" id="footer-category-n2">
-                <a href="#">
-                    <i class="fas fa-industry fa-4x"></i>
-                    <div class="txt">경제/산업</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n3">
-                <a href="#">
-                    <i class="fas fa-hands-helping fa-4x"></i>
-                    <div class="txt">사회복지</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n4">
-                <a href="#">
-                    <i class="fas fa-medkit fa-4x"></i>
-                    <div class="txt">보건</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n5">
-                <a href="#">
-                    <i class="fas fa-plane-departure fa-4x"></i>
-                    <div class="txt">문화/관광</div>
-                </a>
-            </div>
-            <!--            두번째줄-->
-            <div class="footer-category" id="footer-category-n6">
-                <a href="#">
-                    <i class="fas fa-city fa-4x"></i>
-                    <div class="txt">도시관리</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n7">
-                <a href="#">
-                    <i class="fas fa-car-side fa-4x"></i>
-                    <div class="txt">교통</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n8">
-                <a href="#">
-                    <i class="fas fa-leaf fa-4x"></i>
-                    <div class="txt">환경</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n9">
-                <a href="#">
-                    <i class="fas fa-flask fa-4x"></i>
-                    <div class="txt">과학기술</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n10">
-                <a href="#">
-                    <i class="fas fa-gavel fa-4x"></i>
-                    <div class="txt">법률</div>
-                </a>
+            <div class="d-flex justify-content-center">
+                <div class="footer-category" id="footer-category-n6">
+                    <a href="#">
+                        <i class="fas fa-city fa-4x"></i>
+                        <div class="txt">도시관리</div>
+                    </a>
+                </div>
+                <div class="footer-category" id="footer-category-n7">
+                    <a href="#">
+                        <i class="fas fa-car-side fa-4x"></i>
+                        <div class="txt">교통</div>
+                    </a>
+                </div>
+                <div class="footer-category" id="footer-category-n8">
+                    <a href="#">
+                        <i class="fas fa-leaf fa-4x"></i>
+                        <div class="txt">환경</div>
+                    </a>
+                </div>
+                <div class="footer-category" id="footer-category-n9">
+                    <a href="#">
+                        <i class="fas fa-flask fa-4x"></i>
+                        <div class="txt">과학기술</div>
+                    </a>
+                </div>
+                <div class="footer-category" id="footer-category-n10">
+                    <a href="#">
+                        <i class="fas fa-gavel fa-4x"></i>
+                        <div class="txt">법률</div>
+                    </a>
+                </div>
             </div>
         </div>
+        <!--            두번째줄-->
+
 
     </div>
+</div>
 </div>
 
 <!--<footer style="background-color: black;">-->
