--- a/BU/DataList.html
+++ b/BU/DataList.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
-    
+<div th:replace="layout/header :: header"></div>
 </body>
 </html>
