--- a/BU/DataSet.html
+++ b/BU/DataSet.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <title>데이터셋</title>
     <!--    BootStrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+            crossorigin="anonymous"></script>
     <!--    font awesome-->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/DataSet.css">
 </head>
 
 <body>
-    <header>
-    </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-10">
-                <h2>데이터 요청</h2><br>
-                <div class="main">
-                    <a href="#" class="fas fa-search fa-2x"></a>
-                    <div class="search">
-                        <input type="text" id="keyword" class="form-control" title="검색어를 입력해주세요" placeholder="검색어를 입력해주세요" autocomplete="off">
+<div th:replace="layout/header :: header"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-10">
+            <h2>데이터 요청</h2><br>
+            <div class="main">
+                <a href="#" class="fas fa-search fa-2x"></a>
+                <div class="search">
+                    <input type="text" id="keyword" class="form-control" title="검색어를 입력해주세요" placeholder="검색어를 입력해주세요"
+                           autocomplete="off">
+                </div>
+                <br><br>
+
+                <div class="list">
+
+                    전체&nbsp;
+                    <strong>1</strong>건
+
+                    <div class="list_right">
+                        <button type="button" class="btn btn-secondary">등록일 순</button>
+                        <button type="button" class="btn btn-secondary">조회수 순</button>
+
                     </div>
-                    <br><br>
-
-                    <div class="list">
-
-                        전체&nbsp;
-                        <strong>1</strong>건
-
-                        <div class="list_right">
-                            <button type="button" class="btn btn-secondary">등록일 순</button>
-                            <button type="button" class="btn btn-secondary">조회수 순</button>
-                   
-                        </div>
-                    </div><br><br>
-                    <div class="center">
-                        <table class="table table-hover">
-                            <thead>
-                                <tr>
-                                    <th>번호</th>
-                                    <th>제목</th>
-                                    <th>작성자</th>
-                                    <th>날짜</th>
-                                    <th>조회수</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>지섭지섭</td>
-                                    <td>김지섭</td>
-                                    <td>2021.03.26</td>
-                                    <td>1</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="click_right">
-                             <a href="Data_Request.html" class="btn btn-secondary">요청하기</a>
-                        </div>
+                </div>
+                <br><br>
+                <div class="center">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>번호</th>
+                            <th>제목</th>
+                            <th>작성자</th>
+                            <th>날짜</th>
+                            <th>조회수</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>지섭지섭</td>
+                            <td>김지섭</td>
+                            <td>2021.03.26</td>
+                            <td>1</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="click_right">
+                        <a href="Data_Request.html" class="btn btn-secondary">요청하기</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</body></html>
+</div>
+</body>
+</html>
