--- a/BU/Data_Request.html
+++ b/BU/Data_Request.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <title>데이터셋</title>
     <!--    BootStrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+            crossorigin="anonymous"></script>
     <!--    font awesome-->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.7/dist/sweetalert2.all.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.7/dist/sweetalert2.min.css">
@@ -33,41 +37,42 @@
 </head>
 
 <body>
-    <header>
-    </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-10">
+<div th:replace="layout/header :: header"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-10">
                 <span>
                     <h2>요청하기</h2>
                 </span>
-                <hr>
-                <div class="col-12 d-flex">
-                    <div class="col-3 fs-4">제목</div>
-                    <div class="col-9">
-                        <input type="text" class="form-control" placeholder="제목을 입력해주세요">
-                    </div>
+            <hr>
+            <div class="col-12 d-flex">
+                <div class="col-3 fs-4">제목</div>
+                <div class="col-9">
+                    <input type="text" class="form-control" placeholder="제목을 입력해주세요">
                 </div>
-                <hr>
-                <div class="col-12 d-flex">
-                    <div class="col-3 fs-4">요청자</div>
-                    <div class="col-9">
-                        <input type="text" class="form-control" placeholder="" style="width:35%">
-                    </div>
+            </div>
+            <hr>
+            <div class="col-12 d-flex">
+                <div class="col-3 fs-4">요청자</div>
+                <div class="col-9">
+                    <input type="text" class="form-control" placeholder="" style="width:35%">
                 </div>
-                <hr>
-                <div class="col-12 d-flex">
-                    <div class="col-3 fs-4">내용</div>
-                    <div class="col-9">
-                        <textarea class="form-control" cols="" rows="5" style="resize: none;" placeholder="내용을 입력해주세요"></textarea>
-                    </div>
+            </div>
+            <hr>
+            <div class="col-12 d-flex">
+                <div class="col-3 fs-4">내용</div>
+                <div class="col-9">
+                    <textarea class="form-control" cols="" rows="5" style="resize: none;"
+                              placeholder="내용을 입력해주세요"></textarea>
                 </div>
-                <hr>
-                <div class="d-flex justify-content-end">
-                    <a href="index.html" class="btn btn-secondary me-3">취소하기</a>
-                    <a href="#" class="btn btn-secondary" onclick="Request()">요청하기</a>
-                </div>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-end">
+                <a href="index.html" class="btn btn-secondary me-3">취소하기</a>
+                <a href="#" class="btn btn-secondary" onclick="Request()">요청하기</a>
             </div>
         </div>
     </div>
-</body></html>
+</div>
+</body>
+</html>
