--- a/BU/DataList.html
+++ b/BU/DataList.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-<div th:replace="layout/header :: header"></div>
+<div th:replace="fragments/header.html :: fragment-header"></div>
 </body>
 </html>
