--- a/BU/Data_Request.html
+++ b/BU/Data_Request.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-<div th:replace="layout/header :: header"></div>
+<div th:replace="fragments/header.html :: fragment-header"></div>
 <div class="container">
     <div class="row">
         <div class="col-10">
