--- a/jsjs/index.html
+++ b/jsjs/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<div th:replace="layout/header :: header"></div>
+<div th:replace="fragments/header.html :: fragment-header"></div>
 <div class="container mt-3">
     <div class="row">
         <div class="col-lg-10 mx-auto">
