--- a/jsjs/login.html
+++ b/jsjs/login.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-<div th:replace="layout/header :: header"></div>
+<div th:replace="fragments/header.html :: fragment-header"></div>
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-6 mx-auto">
