--- a/_feat/index.html
+++ b/_feat/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -15,7 +15,11 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
     <!--    Leon Sans Font-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.js"></script>
     <style>
         #logo {
             width: 100%;
@@ -27,168 +31,23 @@
             background-color: #f0f0f0;
             /*cursor: move;*/
         }
-
-        /*.dg{*/
-        /*    display: none;*/
-        /*}*/
-
-        @media screen and (max-width: 768px) {
-            #category_main {
-                margin-top: 0px !important;
-            }
-        }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.js"></script>
 
     <!--    CSS Link-->
-    <link rel="stylesheet" href="//cdn.dataportal.kr/asset/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<div th:replace="/layout/header :: header"></div>
-<div class="container">
-    <div class="row mt-0">
+<div th:replace="fragments/header.html :: fragment-header"></div>
+<div class="container mt-3">
+    <div class="row">
         <div class="col-lg-10 mx-auto">
             <div class="input-group flex-nowrap">
                 <input type="text" class="form-control" placeholder="검색할 데이터 입력!" aria-label="Username"
                        aria-describedby="addon-wrapping">
-                <button type="button" class="btn btn-primary"><i class="fas fa-search fa-3x"></i></button>
+                <button type="button" class="btn btn-primary"><i class="fas fa-search fa-2x"></i></button>
             </div>
 
         </div>
     </div>
-    <div class="row mt-0">
-        <div class="col-lg-6 mx-auto">
-            <div class="footer-category" id="footer-category-n1">
-                <a href="#">
-                    <i class="fas fa-school fa-4x"></i>
-                    <div class="txt">교육</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n2">
-                <a href="#">
-                    <i class="fas fa-industry fa-4x"></i>
-                    <div class="txt">경제/산업</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n3">
-                <a href="#">
-                    <i class="fas fa-hands-helping fa-4x"></i>
-                    <div class="txt">사회복지</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n4">
-                <a href="#">
-                    <i class="fas fa-medkit fa-4x"></i>
-                    <div class="txt">보건</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n5">
-                <a href="#">
-                    <i class="fas fa-plane-departure fa-4x"></i>
-                    <div class="txt">문화/관광</div>
-                </a>
-            </div>
-            <!--            두번째줄-->
-            <div class="footer-category" id="footer-category-n6">
-                <a href="#">
-                    <i class="fas fa-city fa-4x"></i>
-                    <div class="txt">도시관리</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n7">
-                <a href="#">
-                    <i class="fas fa-car-side fa-4x"></i>
-                    <div class="txt">교통</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n8">
-                <a href="#">
-                    <i class="fas fa-leaf fa-4x"></i>
-                    <div class="txt">환경</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n9">
-                <a href="#">
-                    <i class="fas fa-flask fa-4x"></i>
-                    <div class="txt">과학기술</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n10">
-                <a href="#">
-                    <i class="fas fa-gavel fa-4x"></i>
-                    <div class="txt">법률</div>
-                </a>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<!--<footer style="background-color: black;">-->
-<!--    d-->
-<!--</footer>-->
-<script src="//cdn.dataportal.kr/asset/js/leon.js"></script>
-<script src="//cdn.dataportal.kr/asset/js/util.js"></script>
-<script>
-    let leon, controll;
-
-    function init() {
-        generateCanvas();
-
-        controll = {
-            color: {},
-            roundCap: true,
-            multiply: true,
-
-            drawing: () => {
-                let i, total = leon.drawing.length;
-                for (i = 0; i < total; i++) {
-                    TweenMax.killTweensOf(leon.drawing[i]);
-                    TweenMax.fromTo(leon.drawing[i], 2, {
-                        value: 0
-                    }, {
-                        value: 1,
-                        ease: Cubic.easeOut
-                    });
-                }
-            }
-
-        };
-
-
-        leon = new LeonSans({
-            text: 'DataPortal',
-            color: ['#000000'],
-            size: 53,
-            weight: 818,
-
-
-        });
-
-
-        requestAnimationFrame(animate);
-        controll.drawing(0);
-
-    }
-
-
-    function animate(t) {
-        requestAnimationFrame(animate);
-
-        ctx.clearRect(0, 0, sw, sh);
-
-        const x = (sw - leon.rect.w) / 2;
-        const y = (sh - leon.rect.h) / 2;
-        leon.position(x, y);
-
-        leon.drawColorful(ctx);
-    }
-
-    window.onload = () => {
-        init();
-    };
-</script>
 </body>
 </html>
