--- a/jsjs/user/mypage.html
+++ b/jsjs/user/mypage.html
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="main-body">
         <div class="row gutters-sm">
-            <div class="col-md-3 mb-3">
+            <div class="col-12 col-lg-4">
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mt-3">
+                <div class="card mt-3 mb-3">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                             <h6 class="mb-0">
@@ -92,9 +92,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-12 col-lg-8">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-12 col-lg-6">
                         <div class="card mb-3">
                             <div class="card-body">
                                 <div class="row">
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-12 col-lg-6">
                         <div class="card mb-3">
                             <div class="card-body">
                                 <div class="row">
@@ -181,11 +181,7 @@
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 55%"
                                          aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
-                                <small>사회</small>
-                                <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 66%"
-                                         aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -212,11 +208,6 @@
                                 <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 55%"
                                          aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <small>사회</small>
-                                <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 66%"
-                                         aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
