--- a/jsjs/usecase/board.html
+++ b/jsjs/usecase/board.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>Title</title>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -20,6 +21,13 @@
 <div th:replace="layout/header :: header"></div>
 
 <div class="container">
+    <h3>데이터허브 활용사례</h3>
+    <p>공공데이터를 활용하여 개발된 국내외 다양한 사례와 가공데이터를 공유하는 공간입니다.</p>
+    <hr>
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="검색" aria-label="Username" aria-describedby="basic-addon1">
+        <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
+    </div>
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
             <div class="card h-100">
